# localization_tool

./: pyproject.toml
localization_tool/: app.py  celery_utils.py  test.py  translator.py
localization_tool/static/css/: styles.css
localization_tool/templates/: index.html
