[tool.poetry]
name = "localization-tool"
version = "0.1.0"
description = "The app translate .arb files for localization of Flutter apps"
authors = ["Dzmitry Boika <dzmitryboika1@gmail.com>"]
readme = "README.md"
packages = [{include = "localization_tool"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-bootstrap = "^3.3.7.1"
flask-dropzone = "^1.6.0"
flask-wtf = "^1.1.1"
python-dotenv = "^1.0.0"
celery = "^5.2.7"
translators = "^5.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
